--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 
 		</dependency>
 
-		<!-- MySQL database drivers -->
+		<!-- MySQL database driver -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
